// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout snapshot tests > classic layout renders without sidebar 1`] = `
"[48;5;233m[38;5;208m╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[39m
[38;5;208m│[39m[1m[38;5;208m [38;5;237m○[39m 🦊 FocusCode · test/model                                                                                          [39m[22m[38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   /\\_/\\    [39m[38;5;237m│[39m [38;5;221myou › Hello[39m                                                                                             [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m  ( o.o ) ♡ [39m[38;5;237m│[39m [38;5;230mfox › [39m[38;5;230mHi there[0m                                                                                          [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   > ^ <  ~ [39m[38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;237m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;5;208m│[39m[38;5;230mfox» [7m [27m                                                                                                                [39m[38;5;208m│[39m
[38;5;208m│[39m[38;5;237m Foxy 小福 · ask · host · Tab complete · Ctrl+O newline · Ctrl+G mascot · Ctrl+T theme                                [39m[38;5;208m│[39m
[38;5;208m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m[49m"
`;

exports[`layout snapshot tests > focus layout hides mascot 1`] = `
"[48;5;233m[38;5;208m╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[39m
[38;5;208m│[39m[1m[38;5;208m [38;5;237m○[39m FocusCode · test/model                                                                                             [39m[22m[38;5;208m│[39m
[38;5;208m│[39m [38;5;221myou › Hello[39m                                                                                                          [38;5;208m│[39m
[38;5;208m│[39m [38;5;230mfox › [39m[38;5;230mHi there[0m                                                                                                       [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;237m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;5;208m│[39m[38;5;230mfox» [7m [27m                                                                                                                [39m[38;5;208m│[39m
[38;5;208m│[39m[38;5;237m Foxy 小福 · ask · host · Tab complete · Ctrl+O newline · Ctrl+G mascot · Ctrl+T theme                                [39m[38;5;208m│[39m
[38;5;208m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m[49m"
`;

exports[`layout snapshot tests > minimal layout renders borderless message stream 1`] = `
"[48;5;233m[38;5;221m> [39m[38;5;230m修复登录 bug[39m
[38;5;230m我来看一下。[0m
[38;5;149m✓ [39m[38;5;237mgrep 完成，命中 3 处[39m

[38;5;208m> [39m[38;5;230m[7m继[27m续[39m
[38;5;237mtest/model[38;5;237m · [39mask[38;5;237m · [39mhost[39m[49m"
`;

exports[`layout snapshot tests > split layout renders sidebar with todo 1`] = `
"[48;5;233m[38;5;208m╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[39m
[38;5;208m│[39m[1m[38;5;208m [38;5;237m○[39m 🦊 FocusCode · test/model                                                                                          [39m[22m[38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   /\\_/\\    [39m[38;5;237m│[39m [38;5;221myou › Hello[39m                                                        [38;5;237m│[39m [38;5;208m📋 Todo[39m                           [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m  ( o.o ) ♡ [39m[38;5;237m│[39m [38;5;230mfox › [39m[38;5;230mHi there[0m                                                     [38;5;237m│[39m  ☐ [38;5;203mTask A[39m                         [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   > ^ <  ~ [39m[38;5;237m│[39m                                                                    [38;5;237m│[39m  🔄 [38;5;214mTask B[39m                        [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;237m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;5;208m│[39m[38;5;230mfox» [7m [27m                                                                                                                [39m[38;5;208m│[39m
[38;5;208m│[39m[38;5;237m Foxy 小福 · ask · host · Tab complete · Ctrl+O newline · Ctrl+G mascot · Ctrl+T theme                                [39m[38;5;208m│[39m
[38;5;208m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m[49m"
`;

exports[`layout snapshot tests > wide layout renders wider sidebar 1`] = `
"[48;5;233m[38;5;208m╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[39m
[38;5;208m│[39m[1m[38;5;208m [38;5;237m○[39m 🦊 FocusCode · test/model                                                                                                                                  [39m[22m[38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   /\\_/\\    [39m[38;5;237m│[39m [38;5;221myou › Hello[39m                                                                    [38;5;237m│[39m [38;5;208m📋 Todo[39m                                                       [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m  ( o.o ) ♡ [39m[38;5;237m│[39m [38;5;230mfox › [39m[38;5;230mHi there[0m                                                                 [38;5;237m│[39m  ☐ [38;5;237mWide task[39m                                                  [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   > ^ <  ~ [39m[38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;237m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;5;208m│[39m[38;5;230mfox» [7m [27m                                                                                                                                                        [39m[38;5;208m│[39m
[38;5;208m│[39m[38;5;237m Foxy 小福 · ask · host · Tab complete · Ctrl+O newline · Ctrl+G mascot · Ctrl+T theme                                                                        [39m[38;5;208m│[39m
[38;5;208m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m[49m"
`;

exports[`layout snapshot tests > workbench layout renders three columns (nav/chat/preview) 1`] = `
"[48;5;233m[1m[38;5;208m ▌Todo[39m[22m[38;5;237m 1▶/1·/2[39m               [38;5;237m │ [39m[38;5;221m> [39m[38;5;230m修复登录 bug[39m                                                                                                [38;5;237m │ [39m[1m[38;5;208m ▌Progress[39m[22m                         
[38;5;214m  ▶ Task A[39m                   [38;5;237m │ [39m[38;5;221m🦊 [39m[38;5;230m我来看一下。[0m                                                                                               [38;5;237m │ [39m[38;5;214m ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀[39m[38;5;237m 0%[39m 
[38;5;237m  · Task B[39m                   [38;5;237m │ [39m[38;5;149m✓ [39m[38;5;237mgrep 完成，命中 3 处[39m                                                                                        [38;5;237m │ [39m[38;5;237m 0/2 tasks[39m                         
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
[1m[38;5;208m ▌Session[39m[22m                    [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m[1m[38;5;208m ▌Tool output[39m[22m                      
[38;5;237m  s1[39m                         [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m[38;5;237m grep 完成，命中 3 处[39m              
[38;5;237m  focus: transcript[39m          [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m[1m[38;5;208m ▌Context[39m[22m                          
[1m[38;5;208m ▌Info[39m[22m                       [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m[38;5;237m  (no context data)[39m                
[38;5;237m  busy: ○[39m                    [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m[1m[38;5;208m ▌Input preview[39m[22m                    
[1m[38;5;208m ▌Partner[39m[22m                    [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m[38;5;230m继续[0m                               
[38;5;221m  🦊 Foxy 小福 · Focus 小狐狸[39m[38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
[38;5;237m  😌 休息中[39m                  [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
[38;5;237m  「你的编程配备鼓励师，一直[0m [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
                             [38;5;237m │ [39m                                                                                                              [38;5;237m │ [39m                                   
[38;5;237m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m
                                [38;5;208m> [39m[38;5;230m继续[7m [27m[39m[38;5;237m  [Tab] 补全 · [Ctrl+O] 换行 · [Ctrl+B] 面板[39m                                                           
[38;5;237m [39m[38;5;237m[1]Nav[39m[38;5;237m [39m[1m[38;5;208m[2]Chat[39m[22m[38;5;237m [39m[38;5;237m[3]Preview[39m[38;5;237m                                                                                                                                  [39mtest/model[38;5;237m · [39mask[38;5;237m · [39mhost[38;5;237m [39m[49m"
`;
